[scss] fix navigation items layout problem

--- a/sass/components/navigation/_navigation.scss
+++ b/sass/components/navigation/_navigation.scss
@@ -14,6 +14,12 @@
 		margin: 0;
 		padding: 0;
 		list-style-type: none;
+		@include flexLayout;
+		flex-direction: column;
+		@include min-md {
+			flex-direction: row;
+		}
+		gap: var(--hctc-spacing-lg);
 
 		li {
 			list-style-type: none;
